--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
          <h1>Ejemplo responsivo 2</h1>
     <main class="contenedor">
         <section class="caja">
-            caja1
+            Caja1
         </section>
         <section class="caja">
-            caja2
+            Caja2
         </section>
          <section class="caja">
-            caja3
+            Caja3
         </section>
         <section class="caja">
-            caja4
+            Caja4
         </section>
          <section class="caja">
-            caja5
+            Caja5
         </section>
         <section class="caja">
-            caja6
+            Caja6
         </section>
     </main>
     
